--- a/Ng-project/.project
+++ b/Ng-project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ng-project</name>
+	<name>Ng-project</name>
 	<comment></comment>
 	<projects>
 	</projects>
